@@ -1,5 +1,10 @@
 2003-09-22  Dennis Cranston <dennis_cranston at yahoo com>
 
+	* gsearchtool-support.c:  Add a comment for translators.
+	(http://bugzilla.gnome.org/show_bug.cgi?id=120434)
+	
+2003-09-22  Dennis Cranston <dennis_cranston at yahoo com>
+
 	* gsearchtool.[ch]:  Fix for bug report 122704.
 	(http://bugzilla.gnome.org/show_bug.cgi?id=122704)
 	
